integ-tests/tests/snapshots/valid__tables__implicit_groups.snap
---
source: integ-tests/tests/valid.rs
expression: valid_toml
---
{
  "a": {
    "b": {
      "c": {
        "answer": 42
      }
    }
  }
}
